[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Badr Ben m'barek <badr.benb@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.2"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
